--- a/ominifood/index.html
+++ b/ominifood/index.html
@@ -5,6 +5,7 @@
     <title>Omnifood</title>
 
     <link rel="stylesheet" href="vendors/css/normalize.css">
+    <link rel="stylesheet" href="vendors/css/grid.css">
     <link rel="stylesheet" href="src/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet">
 </head>
