--- a/ominifood/index.html
+++ b/ominifood/index.html
@@ -11,7 +11,13 @@
 </head>
 
 <body>
-
+    <header>
+        <div class="hero-text-box">
+            <h1>Goodbye junk food. Hello super healthy meals.</h1>
+            <a href="#">I am hungry</a>
+            <a href="#">Show me more</a>
+        </div>
+    </header>
 </body>
 
 </html>
