Initial CSS of header's buttons

--- a/ominifood/index.html
+++ b/ominifood/index.html
@@ -13,9 +13,9 @@
 <body>
     <header>
         <div class="hero-text-box">
-            <h1>Goodbye junk food. Hello super healthy meals.</h1>
-            <a href="#">I am hungry</a>
-            <a href="#">Show me more</a>
+            <h1>Goodbye junk food.<br>Hello super healthy meals.</h1>
+            <a class="btn btn-full" href="#">I am hungry</a>
+            <a class="btn btn-ghost" href="#">Show me more</a>
         </div>
     </header>
 </body>
