Finished the first version of header.

--- a/ominifood/index.html
+++ b/ominifood/index.html
@@ -12,6 +12,17 @@
 
 <body>
     <header>
+        <nav>
+            <div class="row">
+                <img src="src/img/logo-white.png" alt="Omnifood logo" class="logo">
+                <ul class="main-nav">
+                    <li><a href="#">Food delivery</a></li>
+                    <li><a href="#">How it works</a></li>
+                    <li><a href="#">Our cities</a></li>
+                    <li><a href="#">Sign up</a></li>
+                </ul>
+            </div>
+        </nav>
         <div class="hero-text-box">
             <h1>Goodbye junk food.<br>Hello super healthy meals.</h1>
             <a class="btn btn-full" href="#">I am hungry</a>
