--- a/ominifood/index.html
+++ b/ominifood/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="vendors/css/grid.css">
     <link rel="stylesheet" href="src/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.0/css/all.css" integrity="sha384-aOkxzJ5uQz7WBObEZcHvV5JvRW3TUc2rNPA7pe3AwnsUohiw1Vj2Rgx2KSOkF5+h" crossorigin="anonymous">
 </head>
 
 <body>
@@ -29,6 +30,44 @@
             <a class="btn btn-ghost" href="#">Show me more</a>
         </div>
     </header>
+
+    <section class="section-features">
+        <div class="row">
+            <h2>Get food fast &mdash; not fast food</h2>
+            <p class="long-copy">Hello, we're Omnifood, your new premium food delivery service. We know you're always busy. No time for cooking. 
+                So let us take care of that, we're really good at it, we promise!</p>
+        </div>
+        <div class="row">
+            <div class="col span-1-of-4">
+                <i class="fas fa-infinity"></i>
+                <h3>Up to 365 days/year</h3>
+                <p>Never cook again! We really mean that! Our subscription plans include up to 365 days/year coverage. You can also choose 
+                    to order more flexibly, if that's your style.
+                </p>
+            </div>
+            <div class="col span-1-of-4">
+                <i class="far fa-clock"></i>
+                <h3>Ready in 20 minutes</h3>
+                <p>You're only twenty minutes away from your delicious and super healthy meals delivered right to your home. We work with the 
+                    best chefs in each town to ensure that you're 100% happy.
+                </p>
+            </div>
+            <div class="col span-1-of-4">
+                <i class="fas fa-carrot"></i>
+                <h3>100% organic</h3>
+                <p>All our vegetables are fresh, organic and local. Animals are raised without added hormones or antibiotics. Good for your 
+                    health, the environment, and it also tastes better!
+                </p>
+            </div>
+            <div class="col span-1-of-4">
+                <i class="fas fa-shopping-cart"></i>
+                <h3>Order anything</h3>
+                <p>We don't limit your creativity, which means you can order whatever you feel like. You can also choose from our menu 
+                    containing over 100 delicious meals. It's up to you!
+                </p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
