Adjusted features section and initial meals section (images of meals)

--- a/ominifood/index.html
+++ b/ominifood/index.html
@@ -38,35 +38,82 @@
                 So let us take care of that, we're really good at it, we promise!</p>
         </div>
         <div class="row">
-            <div class="col span-1-of-4">
-                <i class="fas fa-infinity"></i>
+            <div class="col span-1-of-4 box">
+                <i class="fas fa-infinity icon-big"></i>
                 <h3>Up to 365 days/year</h3>
                 <p>Never cook again! We really mean that! Our subscription plans include up to 365 days/year coverage. You can also choose 
                     to order more flexibly, if that's your style.
                 </p>
             </div>
-            <div class="col span-1-of-4">
-                <i class="far fa-clock"></i>
+            <div class="col span-1-of-4 box">
+                <i class="far fa-clock icon-big"></i>
                 <h3>Ready in 20 minutes</h3>
                 <p>You're only twenty minutes away from your delicious and super healthy meals delivered right to your home. We work with the 
                     best chefs in each town to ensure that you're 100% happy.
                 </p>
             </div>
-            <div class="col span-1-of-4">
-                <i class="fas fa-carrot"></i>
+            <div class="col span-1-of-4 box">
+                <i class="fas fa-carrot icon-big"></i>
                 <h3>100% organic</h3>
                 <p>All our vegetables are fresh, organic and local. Animals are raised without added hormones or antibiotics. Good for your 
                     health, the environment, and it also tastes better!
                 </p>
             </div>
-            <div class="col span-1-of-4">
-                <i class="fas fa-shopping-cart"></i>
+            <div class="col span-1-of-4 box">
+                <i class="fas fa-shopping-cart icon-big"></i>
                 <h3>Order anything</h3>
                 <p>We don't limit your creativity, which means you can order whatever you feel like. You can also choose from our menu 
                     containing over 100 delicious meals. It's up to you!
                 </p>
             </div>
         </div>
+    </section>
+
+    <section class="section-meals">
+        <ul class="meals-showcase">
+            <li>
+                <figure class="meal-photo">
+                    <img src="src/img/1.jpg" alt="Korean bibimbap with egg and vegetables">
+                </figure>
+            </li>
+            <li>
+                <figure class="meal-photo">
+                    <img src="src/img/2.jpg" alt="Simple italian pizza with cherry tomatoes">
+                </figure>
+            </li>
+            <li>
+                <figure class="meal-photo">
+                    <img src="src/img/3.jpg" alt="Chicken breast steak with vegetables">
+                </figure>
+            </li>
+            <li>
+                <figure class="meal-photo">
+                    <img src="src/img/4.jpg" alt="Autumn pumpkin soup">
+                </figure>
+            </li>
+        </ul>
+        <ul class="meals-showcase">
+            <li>
+                <figure class="meal-photo">
+                    <img src="src/img/5.jpg" alt="Paleo beef steak with vegetables">
+                </figure>
+            </li>
+            <li>
+                <figure class="meal-photo">
+                    <img src="src/img/6.jpg" alt="Healthy baguette with egg and vegetables">
+                </figure>
+            </li>
+            <li>
+                <figure class="meal-photo">
+                    <img src="src/img/7.jpg" alt="Burger with cheedar and bacon">
+                </figure>
+            </li>
+            <li>
+                <figure class="meal-photo">
+                    <img src="src/img/8.jpg" alt="Granola with cherries and strawberries">
+                </figure>
+            </li>
+        </ul>
     </section>
 </body>
 
