Meals photos style and margin fixed

--- a/ominifood/index.html
+++ b/ominifood/index.html
@@ -37,7 +37,7 @@
             <p class="long-copy">Hello, we're Omnifood, your new premium food delivery service. We know you're always busy. No time for cooking. 
                 So let us take care of that, we're really good at it, we promise!</p>
         </div>
-        <div class="row">
+        <div class="row features-row">
             <div class="col span-1-of-4 box">
                 <i class="fas fa-infinity icon-big"></i>
                 <h3>Up to 365 days/year</h3>
