Steps section done and clearfix added

--- a/ominifood/index.html
+++ b/ominifood/index.html
@@ -70,7 +70,7 @@
     </section>
 
     <section class="section-meals">
-        <ul class="meals-showcase">
+        <ul class="meals-showcase clearfix">
             <li>
                 <figure class="meal-photo">
                     <img src="src/img/1.jpg" alt="Korean bibimbap with egg and vegetables">
@@ -92,7 +92,7 @@
                 </figure>
             </li>
         </ul>
-        <ul class="meals-showcase">
+        <ul class="meals-showcase clearfix">
             <li>
                 <figure class="meal-photo">
                     <img src="src/img/5.jpg" alt="Paleo beef steak with vegetables">
@@ -121,10 +121,10 @@
             <h2>How it works &mdash; Simple as 1, 2, 3</h2>
         </div>
         <div class="row">
-            <div class="col span-1-of-2">
+            <div class="col span-1-of-2 steps-box">
                 <img src="src/img/app-iPhone.png" alt="Omnifood app on iPhone" class="app-screen">
             </div>
-            <div class="col span-1-of-2">
+            <div class="col span-1-of-2 steps-box">
                 <div class="works-step">
                     <div>1</div>
                     <p>Choose the subscription plan that best fits your needs and sign up today.</p>
