--- a/ominifood/index.html
+++ b/ominifood/index.html
@@ -143,6 +143,78 @@
             </div>
         </div>
     </section>
+
+    <section class="section-cities">
+        <div class="row">
+            <h2>We're currently in these cities</h2>
+        </div>
+        <div class="row">
+            <div class="col span-1-of-4 box">
+                <img src="src/img/lisbon-3.jpg" alt="Lisbon">
+                <h3>Lisbon</h3>
+                <div class="city-feature">
+                    <i class="fas fa-user"></i>
+                    1600+ happy eaters
+                </div>
+                <div class="city-feature">
+                    <i class="fas fa-star"></i>
+                    60+ top chefs
+                </div>
+                <div class="city-feature">
+                    <i class="fab fa-twitter"></i>
+                    @omnifood_lx
+                </div>
+            </div>
+            <div class="col span-1-of-4 box">
+                <img src="src/img/san-francisco.jpg" alt="San Francisco">
+                <h3>San Francisco</h3>
+                <div class="city-feature">
+                    <i class="fas fa-user"></i>
+                    3700+ happy eaters
+                </div>
+                <div class="city-feature">
+                    <i class="fas fa-star"></i>
+                    160+ top chefs
+                </div>
+                <div class="city-feature">
+                    <i class="fab fa-twitter"></i>
+                    @omnifood_sf
+                </div>
+            </div>
+            <div class="col span-1-of-4 box">
+                <img src="src/img/berlin.jpg" alt="Berlin">
+                <h3>Berlin</h3>
+                <div class="city-feature">
+                    <i class="fas fa-user"></i>
+                    2300+ happy eaters
+                </div>
+                <div class="city-feature">
+                    <i class="fas fa-star"></i>
+                    110+ top chefs
+                </div>
+                <div class="city-feature">
+                    <i class="fab fa-twitter"></i>
+                    @omnifood_berlin
+                </div>
+            </div>
+            <div class="col span-1-of-4 box">
+                <img src="src/img/london.jpg" alt="London">
+                <h3>London</h3>
+                <div class="city-feature">
+                    <i class="fas fa-user"></i>
+                    1200+ happy eaters
+                </div>
+                <div class="city-feature">
+                    <i class="fas fa-star"></i>
+                    50+ top chefs
+                </div>
+                <div class="city-feature">
+                    <i class="fab fa-twitter"></i>
+                    @omnifood_london
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
