--- a/ominifood/index.html
+++ b/ominifood/index.html
@@ -153,64 +153,64 @@
                 <img src="src/img/lisbon-3.jpg" alt="Lisbon">
                 <h3>Lisbon</h3>
                 <div class="city-feature">
-                    <i class="fas fa-user"></i>
+                    <i class="fas fa-user icon-small"></i>
                     1600+ happy eaters
                 </div>
                 <div class="city-feature">
-                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star icon-small"></i>
                     60+ top chefs
                 </div>
                 <div class="city-feature">
-                    <i class="fab fa-twitter"></i>
-                    @omnifood_lx
+                    <i class="fab fa-twitter icon-small"></i>
+                    <a href="#">@omnifood_lx</a>
                 </div>
             </div>
             <div class="col span-1-of-4 box">
                 <img src="src/img/san-francisco.jpg" alt="San Francisco">
                 <h3>San Francisco</h3>
                 <div class="city-feature">
-                    <i class="fas fa-user"></i>
+                    <i class="fas fa-user icon-small"></i>
                     3700+ happy eaters
                 </div>
                 <div class="city-feature">
-                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star icon-small"></i>
                     160+ top chefs
                 </div>
                 <div class="city-feature">
-                    <i class="fab fa-twitter"></i>
-                    @omnifood_sf
+                    <i class="fab fa-twitter icon-small"></i>
+                    <a href="#">@omnifood_sf</a>
                 </div>
             </div>
             <div class="col span-1-of-4 box">
                 <img src="src/img/berlin.jpg" alt="Berlin">
                 <h3>Berlin</h3>
                 <div class="city-feature">
-                    <i class="fas fa-user"></i>
+                    <i class="fas fa-user icon-small"></i>
                     2300+ happy eaters
                 </div>
                 <div class="city-feature">
-                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star icon-small"></i>
                     110+ top chefs
                 </div>
                 <div class="city-feature">
-                    <i class="fab fa-twitter"></i>
-                    @omnifood_berlin
+                    <i class="fab fa-twitter icon-small"></i>
+                    <a href="#">@omnifood_berlin</a>
                 </div>
             </div>
             <div class="col span-1-of-4 box">
                 <img src="src/img/london.jpg" alt="London">
                 <h3>London</h3>
                 <div class="city-feature">
-                    <i class="fas fa-user"></i>
+                    <i class="fas fa-user icon-small"></i>
                     1200+ happy eaters
                 </div>
                 <div class="city-feature">
-                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star icon-small"></i>
                     50+ top chefs
                 </div>
                 <div class="city-feature">
-                    <i class="fab fa-twitter"></i>
-                    @omnifood_london
+                    <i class="fab fa-twitter icon-small"></i>
+                    <a href="#">@omnifood_london</a>
                 </div>
             </div>
         </div>
