Initial testimonials section

--- a/ominifood/index.html
+++ b/ominifood/index.html
@@ -215,6 +215,32 @@
             </div>
         </div>
     </section>
+
+    <section class="section-testimonials">
+        <div class="row">
+            <h2>Our costumers can't live without us</h2>
+        </div>
+        <div class="row">
+            <div class="col span-1-of-3">
+                <blockquote>
+                    Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so Omnifood is a life-saver. Now that I got user to it, I couldn't live without my daily meals!
+                </blockquote>
+                <cite><img src="src/img/customer-1.jpg">Alberto Duncan</cite>
+            </div>
+            <div class="col span-1-of-3">
+                <blockquote>
+                    Inexpensive, healthy and great-tasting meals, delivered right to my home. We have lots of food delivery here in Lisbon, but no one comes even close to Omnifood. Me and my family are so in love!
+                </blockquote>
+                <cite><img src="src/img/customer-2.jpg">Joana Silva</cite>
+            </div>
+            <div class="col span-1-of-3">
+                <blockquote>
+                    I was looking for a quick and easy food delivery service in San Francisco. I tried a lot of them and ended up with Omnifood. Best food delivery service in the Bay Area. Keep up the great work!
+                </blockquote>
+                <cite><img src="src/img/customer-3.jpg">Milton Chapman</cite>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
