--- a/ominifood/index.html
+++ b/ominifood/index.html
@@ -251,15 +251,15 @@
                 <div class="plan-box">
                     <div>
                         <h3>Premium</h3>
-                        <p class="plan-price">$399 / month</p>
+                        <p class="plan-price">$399 <span>/ month</span></p>
                         <p class="plan-price-meal">That's only 13.30$ per meal</p>
                     </div>
                     <div>
                         <ul>
-                            <li><i class="fas fa-check"></i>1 meal every day</li>
-                            <li><i class="fas fa-check"></i>Order 24/7</li>
-                            <li><i class="fas fa-check"></i>Access to newest creations</li>
-                            <li><i class="fas fa-check"></i>Free delivery</li>
+                            <li><i class="fas fa-check icon-small"></i>1 meal every day</li>
+                            <li><i class="fas fa-check icon-small"></i>Order 24/7</li>
+                            <li><i class="fas fa-check icon-small"></i>Access to newest creations</li>
+                            <li><i class="fas fa-check icon-small"></i>Free delivery</li>
                         </ul>
                     </div>
                     <div>
@@ -271,15 +271,15 @@
                 <div class="plan-box">
                     <div>
                         <h3>Pro</h3>
-                        <p class="plan-price">$149 / month</p>
+                        <p class="plan-price">$149 <span>/ month</span></p>
                         <p class="plan-price-meal">That's only 14.90$ per meal</p>
                     </div>
                     <div>
                         <ul>
-                            <li><i class="fas fa-check"></i>1 meal 10 days/month</li>
-                            <li><i class="fas fa-check"></i>Order 24/7</li>
-                            <li><i class="fas fa-check"></i>Access to newest creations</li>
-                            <li><i class="fas fa-check"></i>Free delivery</li>
+                            <li><i class="fas fa-check icon-small"></i>1 meal 10 days/month</li>
+                            <li><i class="fas fa-check icon-small"></i>Order 24/7</li>
+                            <li><i class="fas fa-check icon-small"></i>Access to newest creations</li>
+                            <li><i class="fas fa-check icon-small"></i>Free delivery</li>
                         </ul>
                     </div>
                     <div>
@@ -291,15 +291,15 @@
                 <div class="plan-box">
                     <div>
                         <h3>Starter</h3>
-                        <p class="plan-price">$19 / meal</p>
-                        <p class="plan-price-meal"></p>
+                        <p class="plan-price">$19 <span>/ meal</span></p>
+                        <p class="plan-price-meal">&nbsp;</p>
                     </div>
                     <div>
                         <ul>
-                            <li><i class="fas fa-check"></i>1 meal</li>
-                            <li><i class="fas fa-check"></i>Order from 8 am to 12 pm</li>
-                            <li><i class="fas fa-times"></i>Access to newest creations</li>
-                            <li><i class="fas fa-check"></i>Free delivery</li>
+                            <li><i class="fas fa-check icon-small"></i>1 meal</li>
+                            <li><i class="fas fa-check icon-small"></i>Order from 8 am to 12 pm</li>
+                            <li><i class="fas fa-times icon-small"></i>Access to newest creations</li>
+                            <li><i class="fas fa-check icon-small"></i>Free delivery</li>
                         </ul>
                     </div>
                     <div>
