--- a/ominifood/index.html
+++ b/ominifood/index.html
@@ -11,14 +11,16 @@
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/queries.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.0/css/all.css" integrity="sha384-aOkxzJ5uQz7WBObEZcHvV5JvRW3TUc2rNPA7pe3AwnsUohiw1Vj2Rgx2KSOkF5+h" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.0/css/all.css"
+        integrity="sha384-aOkxzJ5uQz7WBObEZcHvV5JvRW3TUc2rNPA7pe3AwnsUohiw1Vj2Rgx2KSOkF5+h" crossorigin="anonymous">
 </head>
 
 <body>
     <header>
-        <nav>
+        <nav class="sticky">
             <div class="row">
                 <img src="src/img/logo-white.png" alt="Omnifood logo" class="logo">
+                <img src="src/img/logo.png" alt="Omnifood logo" class="logo-black">
                 <ul class="main-nav">
                     <li><a href="#">Food delivery</a></li>
                     <li><a href="#">How it works</a></li>
@@ -37,35 +39,40 @@
     <section class="section-features">
         <div class="row">
             <h2>Get food fast &mdash; not fast food</h2>
-            <p class="long-copy">Hello, we're Omnifood, your new premium food delivery service. We know you're always busy. No time for cooking. 
+            <p class="long-copy">Hello, we're Omnifood, your new premium food delivery service. We know you're always
+                busy. No time for cooking.
                 So let us take care of that, we're really good at it, we promise!</p>
         </div>
         <div class="row features-row">
             <div class="col span-1-of-4 box">
                 <i class="fas fa-infinity icon-big"></i>
                 <h3>Up to 365 days/year</h3>
-                <p>Never cook again! We really mean that! Our subscription plans include up to 365 days/year coverage. You can also choose 
+                <p>Never cook again! We really mean that! Our subscription plans include up to 365 days/year coverage.
+                    You can also choose
                     to order more flexibly, if that's your style.
                 </p>
             </div>
             <div class="col span-1-of-4 box">
                 <i class="far fa-clock icon-big"></i>
                 <h3>Ready in 20 minutes</h3>
-                <p>You're only twenty minutes away from your delicious and super healthy meals delivered right to your home. We work with the 
+                <p>You're only twenty minutes away from your delicious and super healthy meals delivered right to your
+                    home. We work with the
                     best chefs in each town to ensure that you're 100% happy.
                 </p>
             </div>
             <div class="col span-1-of-4 box">
                 <i class="fas fa-carrot icon-big"></i>
                 <h3>100% organic</h3>
-                <p>All our vegetables are fresh, organic and local. Animals are raised without added hormones or antibiotics. Good for your 
+                <p>All our vegetables are fresh, organic and local. Animals are raised without added hormones or
+                    antibiotics. Good for your
                     health, the environment, and it also tastes better!
                 </p>
             </div>
             <div class="col span-1-of-4 box">
                 <i class="fas fa-shopping-cart icon-big"></i>
                 <h3>Order anything</h3>
-                <p>We don't limit your creativity, which means you can order whatever you feel like. You can also choose from our menu 
+                <p>We don't limit your creativity, which means you can order whatever you feel like. You can also choose
+                    from our menu
                     containing over 100 delicious meals. It's up to you!
                 </p>
             </div>
@@ -226,19 +233,22 @@
         <div class="row">
             <div class="col span-1-of-3">
                 <blockquote>
-                    Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so Omnifood is a life-saver. Now that I got user to it, I couldn't live without my daily meals!
+                    Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so
+                    Omnifood is a life-saver. Now that I got user to it, I couldn't live without my daily meals!
                 </blockquote>
                 <cite><img src="src/img/customer-1.jpg">Alberto Duncan</cite>
             </div>
             <div class="col span-1-of-3">
                 <blockquote>
-                    Inexpensive, healthy and great-tasting meals, delivered right to my home. We have lots of food delivery here in Lisbon, but no one comes even close to Omnifood. Me and my family are so in love!
+                    Inexpensive, healthy and great-tasting meals, delivered right to my home. We have lots of food
+                    delivery here in Lisbon, but no one comes even close to Omnifood. Me and my family are so in love!
                 </blockquote>
                 <cite><img src="src/img/customer-2.jpg">Joana Silva</cite>
             </div>
             <div class="col span-1-of-3">
                 <blockquote>
-                    I was looking for a quick and easy food delivery service in San Francisco. I tried a lot of them and ended up with Omnifood. Best food delivery service in the Bay Area. Keep up the great work!
+                    I was looking for a quick and easy food delivery service in San Francisco. I tried a lot of them and
+                    ended up with Omnifood. Best food delivery service in the Bay Area. Keep up the great work!
                 </blockquote>
                 <cite><img src="src/img/customer-3.jpg">Milton Chapman</cite>
             </div>
@@ -402,5 +412,11 @@
         </div>
     </footer>
 </body>
+
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script src="//cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
+<script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
+<script src="//cdn.jsdelivr.net/selectivizr/1.0.3b/selectivizr.min.js"></script> -->
+<script src="src/js/script.js"></script>
 
 </html>
