Scroll control of sticky bar

--- a/ominifood/index.html
+++ b/ominifood/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <nav class="sticky">
+        <nav class="js--sticky">
             <div class="row">
                 <img src="src/img/logo-white.png" alt="Omnifood logo" class="logo">
                 <img src="src/img/logo.png" alt="Omnifood logo" class="logo-black">
@@ -36,7 +36,7 @@
         </div>
     </header>
 
-    <section class="section-features">
+    <section class="section-features js--section-features">
         <div class="row">
             <h2>Get food fast &mdash; not fast food</h2>
             <p class="long-copy">Hello, we're Omnifood, your new premium food delivery service. We know you're always
@@ -413,10 +413,6 @@
     </footer>
 </body>
 
-<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<script src="//cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
-<script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
-<script src="//cdn.jsdelivr.net/selectivizr/1.0.3b/selectivizr.min.js"></script> -->
 <script src="src/js/script.js"></script>
 
 </html>
