--- a/ominifood/index.html
+++ b/ominifood/index.html
@@ -22,17 +22,17 @@
                 <img src="src/img/logo-white.png" alt="Omnifood logo" class="logo">
                 <img src="src/img/logo.png" alt="Omnifood logo" class="logo-black">
                 <ul class="main-nav">
-                    <li><a href="#">Food delivery</a></li>
-                    <li><a href="#">How it works</a></li>
-                    <li><a href="#">Our cities</a></li>
-                    <li><a href="#">Sign up</a></li>
+                    <li><a href="#" id="food-delivery">Food delivery</a></li>
+                    <li><a href="#" id="how-it-works">How it works</a></li>
+                    <li><a href="#" id="our-cities">Our cities</a></li>
+                    <li><a href="#" id="sign-up">Sign up</a></li>
                 </ul>
             </div>
         </nav>
         <div class="hero-text-box">
             <h1>Goodbye junk food.<br>Hello super healthy meals.</h1>
-            <a class="btn btn-full" href="#">I am hungry</a>
-            <a class="btn btn-ghost" href="#">Show me more</a>
+            <a class="btn btn-full js--scroll-to-plans" href="#">I am hungry</a>
+            <a class="btn btn-ghost js--scroll-to-start" href="#">Show me more</a>
         </div>
     </header>
 
@@ -126,7 +126,7 @@
         </ul>
     </section>
 
-    <section class="section-steps">
+    <section class="section-steps js--section-steps">
         <div class="row">
             <h2>How it works &mdash; Simple as 1, 2, 3</h2>
         </div>
@@ -154,7 +154,7 @@
         </div>
     </section>
 
-    <section class="section-cities">
+    <section class="section-cities js--section-cities">
         <div class="row">
             <h2>We're currently in these cities</h2>
         </div>
@@ -255,7 +255,7 @@
         </div>
     </section>
 
-    <section class="section-plans">
+    <section class="section-plans js--section-plans">
         <div class="row">
             <h2>Start eating healthy today</h2>
         </div>
