Added animations using Animation.css

--- a/ominifood/index.html
+++ b/ominifood/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="vendors/css/normalize.css">
     <link rel="stylesheet" href="vendors/css/grid.css">
+    <link rel="stylesheet" href="vendors/css/animation.css">
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/queries.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet">
@@ -43,7 +44,7 @@
                 busy. No time for cooking.
                 So let us take care of that, we're really good at it, we promise!</p>
         </div>
-        <div class="row features-row">
+        <div class="row features-row js--wp-1">
             <div class="col span-1-of-4 box">
                 <i class="fas fa-infinity icon-big"></i>
                 <h3>Up to 365 days/year</h3>
@@ -132,7 +133,7 @@
         </div>
         <div class="row">
             <div class="col span-1-of-2 steps-box">
-                <img src="src/img/app-iPhone.png" alt="Omnifood app on iPhone" class="app-screen">
+                <img src="src/img/app-iPhone.png" alt="Omnifood app on iPhone" class="app-screen js--wp-2">
             </div>
             <div class="col span-1-of-2 steps-box">
                 <div class="works-step">
@@ -158,7 +159,7 @@
         <div class="row">
             <h2>We're currently in these cities</h2>
         </div>
-        <div class="row">
+        <div class="row js--wp-3">
             <div class="col span-1-of-4 box">
                 <img src="src/img/lisbon-3.jpg" alt="Lisbon">
                 <h3>Lisbon</h3>
@@ -260,7 +261,7 @@
             <h2>Start eating healthy today</h2>
         </div>
         <div class="row">
-            <div class="col span-1-of-3">
+            <div class="col span-1-of-3 js--wp-4">
                 <div class="plan-box">
                     <div>
                         <h3>Premium</h3>
