Nav menu when uses small size screen

--- a/ominifood/index.html
+++ b/ominifood/index.html
@@ -22,12 +22,13 @@
             <div class="row">
                 <img src="src/img/logo-white.png" alt="Omnifood logo" class="logo">
                 <img src="src/img/logo.png" alt="Omnifood logo" class="logo-black">
-                <ul class="main-nav">
+                <ul class="main-nav js--main-nav">
                     <li><a href="#" id="food-delivery">Food delivery</a></li>
                     <li><a href="#" id="how-it-works">How it works</a></li>
                     <li><a href="#" id="our-cities">Our cities</a></li>
                     <li><a href="#" id="sign-up">Sign up</a></li>
                 </ul>
+                <a class="mobile-nav-icon js--nav-icon"><i class="fas fa-align-justify"></i></a>
             </div>
         </nav>
         <div class="hero-text-box">
@@ -414,6 +415,7 @@
     </footer>
 </body>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="src/js/script.js"></script>
 
 </html>
