Some HTML problems fixed

--- a/ominifood/index.html
+++ b/ominifood/index.html
@@ -4,7 +4,9 @@
 <head>
     <title>Omnifood</title>
 
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Omnifood is a premium food delivery service with the mission to bring affordable and healty meals to as many people as possible.">
 
     <link rel="stylesheet" href="vendors/css/normalize.css">
     <link rel="stylesheet" href="vendors/css/grid.css">
@@ -248,21 +250,21 @@
                     Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so
                     Omnifood is a life-saver. Now that I got user to it, I couldn't live without my daily meals!
                 </blockquote>
-                <cite><img src="src/img/customer-1.jpg">Alberto Duncan</cite>
+                <cite><img src="src/img/customer-1.jpg" alt="Customer 1 photo">Alberto Duncan</cite>
             </div>
             <div class="col span-1-of-3">
                 <blockquote>
                     Inexpensive, healthy and great-tasting meals, delivered right to my home. We have lots of food
                     delivery here in Lisbon, but no one comes even close to Omnifood. Me and my family are so in love!
                 </blockquote>
-                <cite><img src="src/img/customer-2.jpg">Joana Silva</cite>
+                <cite><img src="src/img/customer-2.jpg" alt="Customer 2 photo">Joana Silva</cite>
             </div>
             <div class="col span-1-of-3">
                 <blockquote>
                     I was looking for a quick and easy food delivery service in San Francisco. I tried a lot of them and
                     ended up with Omnifood. Best food delivery service in the Bay Area. Keep up the great work!
                 </blockquote>
-                <cite><img src="src/img/customer-3.jpg">Milton Chapman</cite>
+                <cite><img src="src/img/customer-3.jpg" alt="Customer 3 photo">Milton Chapman</cite>
             </div>
         </div>
     </section>
