Description section and images added

--- a/natours/index.html
+++ b/natours/index.html
@@ -1,36 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+        <link
+            href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
+            rel="stylesheet"
+        />
 
-        <link rel="stylesheet" href="css/icon-font.css">
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+        <!-- <link rel="stylesheet" href="css/icon-font.css" /> -->
+        <link rel="stylesheet" href="css/style.css" />
+        <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
         <title>Natours | Exciting tours for adventurous people</title>
     </head>
     <body>
         <header class="header">
             <div class="header__logo-box">
-                <img src="img/logo-white.png" alt="Logo" class="header__logo"/>
+                <img src="img/logo-white.png" alt="Logo" class="header__logo" />
             </div>
 
             <div class="header__text-box">
                 <h1 class="heading-primary">
                     <span class="heading-primary--main">Outdoors</span>
-                    <span class="heading-primary--sub">is where life happens</span>
+                    <span class="heading-primary--sub"
+                        >is where life happens</span
+                    >
                 </h1>
 
-                <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+                <a href="#" class="btn btn--white btn--animated"
+                    >Discover our tours</a
+                >
             </div>
         </header>
 
         <main>
             <section class="section-about">
-                <div class="u-center-text u-margin-bottom-8">
+                <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         Exciting tours for adventurous people
                     </h2>
@@ -38,10 +45,45 @@
 
                 <div class="row">
                     <div class="col-1-of-2">
-                        Text content
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            You are going to fall in love with nature
+                        </h3>
+                        <p class="paragraph">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing
+                            elit. Nesciunt, quo! Incidunt quae ullam in dolorum
+                            necessitatibus. Commodi doloremque reprehenderit
+                            labore expedita sint eum, voluptatibus
+                            necessitatibus, itaque minus alias iste cupiditate!
+                        </p>
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            Live adventures like you never have before
+                        </h3>
+                        <p class="paragraph">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing
+                            elit. Officia sapiente illo eligendi fuga
+                            repudiandae. Veniam quod quis magnam!
+                        </p>
+
+                        <a href="#" class="btn-text">Learn more &rarr;</a>
                     </div>
                     <div class="col-1-of-2">
-                        Image composition
+                        <div class="composition">
+                            <img
+                                src="img/nat-1-large.jpg"
+                                alt="Photo 1"
+                                class="composition__photo composition__photo--p1"
+                            />
+                            <img
+                                src="img/nat-2-large.jpg"
+                                alt="Photo 2"
+                                class="composition__photo composition__photo--p2"
+                            />
+                            <img
+                                src="img/nat-3-large.jpg"
+                                alt="Photo 3"
+                                class="composition__photo composition__photo--p3"
+                            />
+                        </div>
                     </div>
                 </div>
             </section>
