--- a/natours/index.html
+++ b/natours/index.html
@@ -9,7 +9,7 @@
             rel="stylesheet"
         />
 
-        <!-- <link rel="stylesheet" href="css/icon-font.css" /> -->
+        <link rel="stylesheet" href="css/icon-font.css" />
         <link rel="stylesheet" href="css/style.css" />
         <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
@@ -83,6 +83,66 @@
                                 alt="Photo 3"
                                 class="composition__photo composition__photo--p3"
                             />
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="section-features">
+                <div class="row">
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-world"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">
+                                Explore the world
+                            </h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipisicing elit. Incidunt quae ullam in dolorum
+                                necessitatibus.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-compass"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">
+                                Meet nature
+                            </h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipisicing elit. Incidunt quae ullam in dolorum
+                                necessitatibus.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-map"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">
+                                Find your way
+                            </h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipisicing elit. Incidunt quae ullam in dolorum
+                                necessitatibus.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-heart"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">
+                                Live a healthier life
+                            </h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipisicing elit. Incidunt quae ullam in dolorum
+                                necessitatibus.
+                            </p>
                         </div>
                     </div>
                 </div>
