--- a/natours/index.html
+++ b/natours/index.html
@@ -147,6 +147,37 @@
                     </div>
                 </div>
             </section>
+
+            <section class="section-tours">
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">
+                        Most popular tours
+                    </h2>
+                </div>
+
+                <div class="row">
+                    <div class="col-1-of-3">
+                        <div class="card">
+                            <div
+                                class="card__side card__side--front card__side--front-1"
+                            >
+                                Front
+                            </div>
+                            <div
+                                class="card__side card__side--back card__side--back-1"
+                            >
+                                Back
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-1-of-3">
+                        Col 1 of 3
+                    </div>
+                    <div class="col-1-of-3">
+                        Col 1 of 3
+                    </div>
+                </div>
+            </section>
         </main>
 
         <!--
