--- a/natours/index.html
+++ b/natours/index.html
@@ -273,6 +273,38 @@
                     <a href="#" class="btn btn--green">Discover all tours</a>
                 </div>
             </section>
+
+            <section class="section-stories">
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">
+                        We make people genuinely happy
+                    </h2>
+                </div>
+
+                <div class="row">
+                    <div class="story">
+                        <figure class="story__shape">
+                            <img
+                                src="img/nat-8.jpg"
+                                alt="Person on a tour"
+                                class="story__img"
+                            />
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading-tertiary u-margin-bottom-small">
+                                I had the best week ever with my family
+                            </h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Modi provident pariatur
+                                voluptatem eligendi nostrum rerum expedita
+                                excepturi consectetur natus praesentium dolores
+                                quisquam tempore.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
 
         <!--
