--- a/natours/index.html
+++ b/natours/index.html
@@ -289,6 +289,9 @@
                                 alt="Person on a tour"
                                 class="story__img"
                             />
+                            <figcaption class="story__caption">
+                                Mary Smith
+                            </figcaption>
                         </figure>
                         <div class="story__text">
                             <h3 class="heading-tertiary u-margin-bottom-small">
@@ -303,6 +306,37 @@
                             </p>
                         </div>
                     </div>
+                </div>
+
+                <div class="row">
+                    <div class="story">
+                        <figure class="story__shape">
+                            <img
+                                src="img/nat-9.jpg"
+                                alt="Person on a tour"
+                                class="story__img"
+                            />
+                            <figcaption class="story__caption">
+                                Jack Wilson
+                            </figcaption>
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading-tertiary u-margin-bottom-small">
+                                WOW! My life is completely different now
+                            </h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Modi provident pariatur
+                                voluptatem eligendi nostrum rerum expedita
+                                excepturi consectetur natus praesentium dolores
+                                quisquam tempore.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="u-center-text u-margin-top-huge">
+                    <a href="#" class="btn-text">Read all stories &rarr;</a>
                 </div>
             </section>
         </main>
