--- a/natours/index.html
+++ b/natours/index.html
@@ -346,6 +346,46 @@
                     <a href="#" class="btn-text">Read all stories &rarr;</a>
                 </div>
             </section>
+
+            <section class="section-book">
+                <div class="row">
+                    <div class="book">
+                        <div class="book__form">
+                            <form action="#" class="form">
+                                <div class="u-margin-bottom-medium">
+                                    <h2 class="heading-secondary">
+                                        Start booking now
+                                    </h2>
+                                </div>
+                                <div class="form__gropu">
+                                    <input
+                                        id="name"
+                                        type="text"
+                                        class="form__input"
+                                        placeholder="Full Name"
+                                        required
+                                    />
+                                    <label for="name" class="form__label"
+                                        >Full name</label
+                                    >
+                                </div>
+                                <div class="form__gropu">
+                                    <input
+                                        id="email"
+                                        type="email"
+                                        class="form__input"
+                                        placeholder="Email address"
+                                        required
+                                    />
+                                    <label for="email" class="form__label"
+                                        >Email address</label
+                                    >
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
 
         <!--
