Booking section radio buttons

--- a/natours/index.html
+++ b/natours/index.html
@@ -357,7 +357,7 @@
                                         Start booking now
                                     </h2>
                                 </div>
-                                <div class="form__gropu">
+                                <div class="form__group">
                                     <input
                                         id="name"
                                         type="text"
@@ -369,7 +369,7 @@
                                         >Full name</label
                                     >
                                 </div>
-                                <div class="form__gropu">
+                                <div class="form__group">
                                     <input
                                         id="email"
                                         type="email"
@@ -380,6 +380,46 @@
                                     <label for="email" class="form__label"
                                         >Email address</label
                                     >
+                                </div>
+                                <div class="form__group u-margin-bottom-medium">
+                                    <div class="form__radio-group">
+                                        <input
+                                            name="size"
+                                            type="radio"
+                                            class="form__radio-input"
+                                            id="small"
+                                        />
+                                        <label
+                                            for="small"
+                                            class="form__radio-label"
+                                            ><span
+                                                class="form__radio-button"
+                                            ></span>
+                                            Small tour group</label
+                                        >
+                                    </div>
+                                    <div class="form__radio-group">
+                                        <input
+                                            name="size"
+                                            type="radio"
+                                            class="form__radio-input"
+                                            id="large"
+                                        />
+                                        <label
+                                            for="large"
+                                            class="form__radio-label"
+                                            ><span
+                                                class="form__radio-button"
+                                            ></span
+                                            >Large tour group</label
+                                        >
+                                    </div>
+                                </div>
+
+                                <div class="form__group">
+                                    <button class="btn btn--green">
+                                        Next step &rarr;
+                                    </button>
                                 </div>
                             </form>
                         </div>
