--- a/natours/index.html
+++ b/natours/index.html
@@ -428,6 +428,52 @@
             </section>
         </main>
 
+        <footer class="footer">
+            <div class="footer__logo-box">
+                <img
+                    src="img/logo-green-2x.png"
+                    alt="Full logo"
+                    class="footer__logo"
+                />
+            </div>
+            <div class="row">
+                <div class="col-1-of-2">
+                    <div class="footer__navigation">
+                        <ul class="footer__list">
+                            <li class="footer__item">
+                                <a href="" class="footer__link">Company</a>
+                            </li>
+                            <li class="footer__item">
+                                <a href="" class="footer__link">Contact us</a>
+                            </li>
+                            <li class="footer__item">
+                                <a href="" class="footer__link">Carrers</a>
+                            </li>
+                            <li class="footer__item">
+                                <a href="" class="footer__link"
+                                    >Privacy policy</a
+                                >
+                            </li>
+                            <li class="footer__item">
+                                <a href="" class="footer__link">Terms</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-1-of-2">
+                    <p class="footer__copyrigth">
+                        Developed by
+                        <a href="#" class="footer__link"
+                            >Gabriel Hahn Schaeffer</a
+                        >
+                        during
+                        <a href="#" class="footer__link">Jonas Schmedtmann</a>
+                        course. Copyright &copy;
+                    </p>
+                </div>
+            </div>
+        </footer>
+
         <!--
         <section class="grid-test">
             <div class="row">
