Menu icon animation

--- a/natours/index.html
+++ b/natours/index.html
@@ -23,7 +23,9 @@
                 class="navigation__checkbox"
             />
 
-            <label for="navi-toggle" class="navigation__button">MENU</label>
+            <label for="navi-toggle" class="navigation__button">
+                <span class="navigation__icon">&nbsp;</span>
+            </label>
 
             <div class="navigation__background">&nbsp;</div>
 
