Initial popup style

--- a/natours/index.html
+++ b/natours/index.html
@@ -518,6 +518,43 @@
             </div>
         </footer>
 
+        <div class="popup">
+            <div class="popup__content">
+                <div class="popup__left">
+                    <img
+                        src="img/nat-8.jpg"
+                        alt="Tour photo"
+                        class="popup__img"
+                    />
+                    <img
+                        src="img/nat-9.jpg"
+                        alt="Tour photo"
+                        class="popup__img"
+                    />
+                </div>
+                <div class="popup__right">
+                    <div class="heading-secondary u-margin-bottom-small">
+                        Start booking now
+                    </div>
+                    <h3 class="heading-tertiary u-margin-bottom-small">
+                        Important &ndash; Please read these terms before booking
+                    </h3>
+                    <p class="popup__text">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing
+                        elit. Nihil ex in eligendi porro reprehenderit optio
+                        deserunt minus ea, sint a non nesciunt quasi, placeat,
+                        voluptates perferendis tempora impedit vitae. Corrupti.
+                        Lorem ipsum dolor sit amet. Lorem, ipsum dolor sit amet
+                        consectetur adipisicing elit. Deleniti consectetur porro
+                        quod iusto voluptatibus. Consectetur consequatur nostrum
+                        sequi accusamus perspiciatis explicabo magnam, omnis
+                        itaque soluta. Hic voluptatum ut enim architecto!
+                    </p>
+                    <a href="#" class="btn btn--green">Book now</a>
+                </div>
+            </div>
+        </div>
+
         <!--
         <section class="grid-test">
             <div class="row">
