--- a/natours/index.html
+++ b/natours/index.html
@@ -73,7 +73,7 @@
                     >
                 </h1>
 
-                <a href="#" class="btn btn--white btn--animated"
+                <a href="#section-tours" class="btn btn--white btn--animated"
                     >Discover our tours</a
                 >
             </div>
@@ -192,7 +192,7 @@
                 </div>
             </section>
 
-            <section class="section-tours">
+            <section class="section-tours" id="section-tours">
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         Most popular tours
@@ -230,7 +230,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$297</p>
                                     </div>
-                                    <a href="#" class="btn btn--white"
+                                    <a href="#popup" class="btn btn--white"
                                         >Book now!</a
                                     >
                                 </div>
@@ -267,7 +267,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$497</p>
                                     </div>
-                                    <a href="#" class="btn btn--white"
+                                    <a href="#popup" class="btn btn--white"
                                         >Book now!</a
                                     >
                                 </div>
@@ -304,7 +304,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$897</p>
                                     </div>
-                                    <a href="#" class="btn btn--white"
+                                    <a href="#popup" class="btn btn--white"
                                         >Book now!</a
                                     >
                                 </div>
@@ -518,7 +518,7 @@
             </div>
         </footer>
 
-        <div class="popup">
+        <div class="popup" id="popup">
             <div class="popup__content">
                 <div class="popup__left">
                     <img
@@ -533,6 +533,7 @@
                     />
                 </div>
                 <div class="popup__right">
+                    <a href="#section-tours" class="popup__close">&times;</a>
                     <div class="heading-secondary u-margin-bottom-small">
                         Start booking now
                     </div>
