Styling user description section

--- a/trillo/index.html
+++ b/trillo/index.html
@@ -156,7 +156,7 @@
                             <li class="list__item">Perfect for families</li>
                         </ul>
                         <div class="recommend">
-                            <p class="recommend_count">
+                            <p class="recommend__count">
                                 Lucy and 3 other friend recommend this hotel.
                             </p>
                             <div class="recommend__friends">
