Initial CSS Grid definitions

--- a/nexter/index.html
+++ b/nexter/index.html
@@ -1,17 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+        <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i" rel="stylesheet">
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="shortcut icon" type="image/png" href="img/favicon.png">
 
-    <title>nexter &mdash; your home, your freedom</title>
-  </head>
-  <body class="container">
+        <title>nexter &mdash; your home, your freedom</title>
+    </head>
+    <body class="container">
+        <div class="sidebar">
+            Sidebar
+        </div>
 
-  </body>
+        <header class="header">
+            Header
+        </header>
+
+        <div class="realtors">
+            3 Realtors
+        </div>
+
+        <section class="features">
+            Features
+        </section>
+
+        <div class="story__pictures">
+            Story pictures
+        </div>
+
+        <div class="story__content">
+            Story content
+        </div>
+
+        <section class="homes">
+            Homes
+        </section>
+
+        <section class="gallery">
+            Gallery
+        </section>
+
+        <footer class="footer">
+            Footer
+        </footer>
+    </body>
 </html>
