Features section styles

--- a/nexter/index.html
+++ b/nexter/index.html
@@ -29,7 +29,7 @@
                 <svg class="feature__icon">
                     <use xlink:href="img/sprite.svg#icon-global"></use>
                 </svg>
-                <h4 class="heading-4">World's best luxury homes</h4>
+                <h4 class="heading-4 heading-4--dark">World's best luxury homes</h4>
                 <p class="feature__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur distinctio necessitatibus pariatur voluptatibus.</p>
             </div>
 
@@ -37,7 +37,7 @@
                 <svg class="feature__icon">
                     <use xlink:href="img/sprite.svg#icon-trophy"></use>
                 </svg>
-                <h4 class="heading-4">Only the best properties</h4>
+                <h4 class="heading-4 heading-4--dark">Only the best properties</h4>
                 <p class="feature__text">Voluptatum mollitia quae. Vero ipsum sapiente molestias accusamus rerum sed a eligendi aut quia.</p>
             </div>
 
@@ -45,7 +45,7 @@
                 <svg class="feature__icon">
                     <use xlink:href="img/sprite.svg#icon-map-pin"></use>
                 </svg>
-                <h4 class="heading-4">All homes in top locations</h4>
+                <h4 class="heading-4 heading-4--dark">All homes in top locations</h4>
                 <p class="feature__text">Tenetur distinctio necessitatibus pariatur voluptatibus quidem consequatur harum.</p>
             </div>
 
@@ -53,7 +53,7 @@
                 <svg class="feature__icon">
                     <use xlink:href="img/sprite.svg#icon-key"></use>
                 </svg>
-                <h4 class="heading-4">Your home in one week</h4>
+                <h4 class="heading-4 heading-4--dark">Your home in one week</h4>
                 <p class="feature__text">Vero ipsum sapiente molestias accusamus rerum. Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
 
@@ -61,7 +61,7 @@
                 <svg class="feature__icon">
                     <use xlink:href="img/sprite.svg#icon-presentation"></use>
                 </svg>
-                <h4 class="heading-4">Top 1% realtors</h4>
+                <h4 class="heading-4 heading-4--dark">Top 1% realtors</h4>
                 <p class="feature__text">Quidem consequatur harum, voluptatum mollitia quae. Tenetur distinctio necessitatibus pariatur voluptatibus.</p>
             </div>
 
@@ -69,7 +69,7 @@
                 <svg class="feature__icon">
                     <use xlink:href="img/sprite.svg#icon-lock"></use>
                 </svg>
-                <h4 class="heading-4">Secure payments on nexter</h4>
+                <h4 class="heading-4 heading-4--dark">Secure payments on nexter</h4>
                 <p class="feature__text">Pariatur voluptatibus quidem consequatur harum, voluptatum mollitia quae.</p>
             </div>
         </section>
