Homes section finished

--- a/nexter/index.html
+++ b/nexter/index.html
@@ -119,7 +119,7 @@
                     </svg>
                     <p>$1,200,000</p>
                 </div>
-                <button class="cta">Contact realtors</button>
+                <button class="btn home__btn">Contact realtors</button>
             </div>
 
             <div class="home">
@@ -152,7 +152,7 @@
                     </svg>
                     <p>$2,750,000</p>
                 </div>
-                <button class="cta">Contact realtors</button>
+                <button class="btn home__btn">Contact realtors</button>
             </div>
 
             <div class="home">
@@ -185,7 +185,7 @@
                     </svg>
                     <p>$850,000</p>
                 </div>
-                <button class="cta">Contact realtors</button>
+                <button class="btn home__btn">Contact realtors</button>
             </div>
 
             <div class="home">
@@ -218,7 +218,7 @@
                     </svg>
                     <p>$1,950,000</p>
                 </div>
-                <button class="cta">Contact realtors</button>
+                <button class="btn home__btn">Contact realtors</button>
             </div>
 
             <div class="home">
@@ -251,7 +251,7 @@
                     </svg>
                     <p>$9,500,000</p>
                 </div>
-                <button class="cta">Contact realtors</button>
+                <button class="btn home__btn">Contact realtors</button>
             </div>
 
             <div class="home">
@@ -284,7 +284,7 @@
                     </svg>
                     <p>$600,000</p>
                 </div>
-                <button class="cta">Contact realtors</button>
+                <button class="btn home__btn">Contact realtors</button>
             </div>
         </section>
 
